# petals

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.base  README.md  justfile  pyproject.toml
analysis/: trial_event_viz.ipynb  trial_stock_impact.py
analysis/analysis/output/: AZN_2026-01-13_event_study.parquet  AZN_2026-01-13_event_study_metadata.json
cdk/: app.py  cdk.context.json  cdk.json
cdk/stacks/: README.md  shared.py
cdk/stacks/analytics/: __init__.py  entity_resolution.py
cdk/stacks/pipelines/: __init__.py  entity_match.py  ticker_details.py  ticker_prices.py  tickers.py  trials.py
cdk/tests/: test_shared_stack.py  test_ticker_details_stack.py  test_ticker_prices_stack.py  test_tickers_stack.py  test_trials_stack.py
docs/: ARCHITECTURE.md  DESIGN.md  entity_resolution_explained.md  labeling_workflow.md  matching_algorithms.md  phase2_summary.md
scripts/: backfill_ticker_prices_market_locale.sql  bulk_load_prices.py  compare_embedding_models.py  compare_matching_algorithms.py  evaluate_predictions.py  label_helper.py  label_helper_v2.py  read_ticker_sample.py  run_backfill_ticker_prices.sh  ticker_sample.txt
src/analytics/: __init__.py
src/analytics/entity_resolution/: config.py  evaluation.py  extract.py  load.py  main.py  matching.py  models.py  warehouse.py
src/analytics/entity_resolution/data/: README.md  __init__.py  ground_truth.csv
src/pipelines/alias_gen/: extract.py  main.py
src/pipelines/entity_match/: __init__.py  aliases.py  blocking.py  config.py  extract.py  load.py  main.py  scoring.py
src/pipelines/ticker_details/: __init__.py  extract.py  load.py  main.py
src/pipelines/ticker_prices/: __init__.py  extract.py  load.py  main.py
src/pipelines/tickers/: extract.py  load.py  main.py
src/pipelines/trials/: __init__.py  extract.py  load.py  main.py
tests/: conftest.py  test_batch_moto.py  test_entity_match.py  test_entity_resolution.py  test_evaluation.py  test_localstack_setup.py  test_matching.py  test_ticker_prices.py  test_tickers_scd.py
