[project]
name = "petals"
version = "0.1.0"
description = "End-to-end data platform demonstration"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "boto3>=1.42.30",
    "constructs>=10.0.0",
    "polars>=1.37.1",
    "psutil>=5.9.0",
    "pyarrow>=22.0.0",
    "pyiceberg>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "moto[batch]>=5.0.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "testcontainers[localstack]>=4.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
