[project]
name = "petals"
version = "0.1.0"
description = "End-to-end data platform demonstration"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "boto3>=1.42.30",
    "constructs>=10.0.0",
    "httpx>=0.27.0",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "psutil>=5.9.0",
    "pyarrow>=22.0.0",
    "pyiceberg[pyiceberg-core]>=0.10.0",
    "s3fs>=2024.0.0",
    "sentence-transformers>=3.0.0",
    "yfinance==1.1.0",
]

[project.optional-dependencies]
dev = [
    "moto[batch]>=5.0.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "testcontainers[localstack]>=4.10.0",
]
notebook = [
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    # testcontainers uses its own deprecated decorator internally (library bug)
    # https://github.com/testcontainers/testcontainers-python/issues - track for fix
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

